// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionFeed renders correctly when there is a response 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "__typename": "TokenTransferV2",
            "address": "0xd68360cce1f1ff696d898f58f03e0f1252f2ea33",
            "amount": Object {
              "tokenAddress": "0x874069fa1eb16d44d622f2e0ca25eea172369bc1",
              "value": "0.1",
            },
            "block": "8648978",
            "fees": Array [],
            "metadata": Object {},
            "status": "Complete",
            "timestamp": 1542306118,
            "transactionHash": "0x544367eaf2b01622dd1c7b75a6b19bf278d72127aecfb2e5106424c40c268e8b",
            "type": "RECEIVED",
          },
        ],
        "title": "November 2018",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  keyboardShouldPersistTaps="always"
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  testID="TransactionList"
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Medium",
              "fontSize": 13,
              "lineHeight": 16,
            }
          }
        >
          November 2018
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            }
          }
        >
          <View>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                    Object {
                      "backgroundColor": "hsl(192, 53%, 93%)",
                      "borderRadius": 20,
                      "height": 40,
                      "width": 40,
                    },
                  ]
                }
              >
                <svg
                  fill="hsl(192, 53%, 93%)"
                  height="40"
                  style={Object {}}
                  viewBox="0 0 40 40"
                  width="40"
                />
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "marginLeft": 16,
                "width": "55%",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#2E3338",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 16,
                  "lineHeight": 22,
                }
              }
              testID="TransferFeedItem/title"
            >
              feedItemReceivedTitle, {"displayName":"feedItemAddress, {\\"address\\":\\"0xd683...ea33\\"}"}
            </Text>
            <Text
              style={
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "paddingTop": 2,
                }
              }
              testID="TransferFeedItem/subtitle"
            >
              feedItemReceivedInfo, {"context":"noComment"}
            </Text>
          </View>
          <View
            style={
              Object {
                "flexShrink": 1,
                "marginLeft": 16,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 22,
                    "marginLeft": "auto",
                    "textAlign": "right",
                  },
                  Object {
                    "color": "#1AB775",
                  },
                ]
              }
              testID="TransferFeedItem/amount"
            >
              +
              ₱
              0.13
            </Text>
            <Text
              style={
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                  "marginLeft": "auto",
                  "minWidth": "40%",
                  "paddingTop": 2,
                  "textAlign": "right",
                }
              }
              testID="TransferFeedItem/tokenAmount"
            >
              
              0.10
               cUSD
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`TransactionFeed renders swap feed item correctly 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "__typename": "TokenExchangeV2",
            "block": "11489458",
            "fees": Array [
              Object {
                "amount": Object {
                  "tokenAddress": "0x874069fa1eb16d44d622f2e0ca25eea172369bc1",
                  "value": "0.0001217335",
                },
                "type": "SECURITY_FEE",
              },
            ],
            "inAmount": Object {
              "tokenAddress": "0x10c892a6ec43a53e45d0b916b4b7d383b1b78c0f",
              "value": "0.5",
            },
            "metadata": Object {},
            "outAmount": Object {
              "tokenAddress": "0x874069fa1eb16d44d622f2e0ca25eea172369bc1",
              "value": "0.5",
            },
            "status": "Complete",
            "timestamp": 1154636121000,
            "transactionHash": "0x99B86JUE4H1Ie36S0xZ4f8j1QGVECz083k82Gj2lummPt8i2ssu6Z7G5947Qe3Td",
            "type": "SWAP_TRANSACTION",
          },
        ],
        "title": "August 2006",
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  keyExtractor={[Function]}
  keyboardShouldPersistTaps="always"
  onContentSizeChange={[Function]}
  onEndReached={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  testID="TransactionList"
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#FFFFFF",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 16,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          style={
            Object {
              "color": "#9CA4A9",
              "fontFamily": "Inter-Medium",
              "fontSize": 13,
              "lineHeight": 16,
            }
          }
        >
          August 2006
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "rippleRadius": undefined,
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "column",
              }
            }
          >
            <svg
              fill="none"
              height={40}
              width={40}
            >
              <circle
                cx={20}
                cy={20}
                fill="#F8F9F9"
                r={20}
              />
              <path
                d="M27 26V13m0 0-4 4m4-4 4 4M14 13v13m0 0 4-4m-4 4-4-4"
                stroke="#B4B9BD"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth={2}
              />
            </svg>
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "marginLeft": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginTop": -1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "flexShrink": 1,
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
                testID="SwapFeedItem/title"
              >
                swapScreen.title
              </Text>
              <Text
                style={
                  Array [
                    Object {
                      "color": "#2E3338",
                      "flexWrap": "wrap",
                      "fontFamily": "Inter-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                      "marginLeft": "auto",
                      "minWidth": "40%",
                      "paddingLeft": 10,
                      "textAlign": "right",
                    },
                    Object {
                      "color": "#1AB775",
                    },
                  ]
                }
                testID="SwapFeedItem/incomingAmount"
              >
                +
                0.50
                 cEUR
              </Text>
            </View>
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginTop": -1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#9CA4A9",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                    "paddingTop": 2,
                  }
                }
                testID="SwapFeedItem/subtitle"
              >
                cUSD
                 
                to
                 
                cEUR
              </Text>
              <Text
                style={
                  Object {
                    "color": "#9CA4A9",
                    "flexWrap": "wrap",
                    "fontFamily": "Inter-Regular",
                    "fontSize": 14,
                    "lineHeight": 18,
                    "marginLeft": "auto",
                    "minWidth": "40%",
                    "paddingLeft": 10,
                    "paddingTop": 2,
                    "textAlign": "right",
                  }
                }
                testID="SwapFeedItem/outgoingAmount"
              >
                -
                0.50
                 cUSD
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;
